test/echo/httproute-protected/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-protected
spec:
  hostnames:
  - echo2-d.suffix-automatic-replace
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: gateways
    name: main-protected
    sectionName: https-main
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: echo
      port: 80
      weight: 1
