test/echo/httproute-protected/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: echo

resources:
- ./httproute.yaml
- ../../../ingress/manual-certificates/domain-info/

replacements:
- source:
    kind: ConfigMap
    name: domain-info-public-protected
    fieldPath: data.domain_suffix
  targets:
  - select:
      kind: HTTPRoute
      name: echo-protected
    options:
      delimiter: .
      index: 1
    fieldPaths:
    - spec.hostnames.0
